vehicle/tests/golden/error/scoping/freeFreeShadowing/spec.vcl
f : Bool
f = True

g : Bool -> Bool
g f = True
